fix: clouds and pattern fetch
